# FlowerPower

./: Dockerfile  FML.cbp  FML.depend  FML.layout  README.md  TEST.TXT.txt  json.json  main.cpp
demo/: CMakeLists.txt  main.cpp
docs/: Raport Analiza.docx
include/: MQTTHelper.hpp  SmartPot.hpp  SmartPotEndpoint.hpp  Sqrt.hpp
src/: CMakeLists.txt  MQTTHelper.cpp  SmartPot.cpp  SmartPotEndpoint.cpp  Sqrt.cpp
